fix nulls in consultations view by doctor